--- a/R/rRNADepletion.Rmd
+++ b/R/rRNADepletion.Rmd
@@ -46,71 +46,19 @@ library(Gviz)
 library(AnnotationFilter)
 library(Rsamtools)
 library(kmer)
+library(furrr)
 ```
 
 ```{r options}
 if (interactive()) setwd(here::here())
 theme_set(theme_bw())
-```
-
-## Sample information
-
-```{r files}
-files1 <- list.files(
-  path = "0_rawData/FastQC",
-  pattern = "zip",
-  full.names = TRUE
-)
-files2 <- list.files(
-  path = "../20170327_Psen2S4Ter_RNASeq/data/0_rawData/FastQC",
-  pattern = "zip",
-  full.names = TRUE
-) %>%
-  str_subset("R1_fastqc.zip")
-filesFull <- c(files1, files2)
-files <- filesFull %>%
-  basename()
-```
-
-```{r samples}
-samples <- tibble(
-  sample = str_remove(files, "_fastqc.zip"),
-  dataset = NA,
-  organism = NA
-) %>%
-  mutate(
-    dataset = ifelse(
-      str_detect(sample, "SRR213"), "E-GEOD-71609", dataset
-    ),
-    dataset = ifelse(
-      str_detect(sample, "SRR218"), "E-GEOD-72322", dataset
-    ),
-    dataset = ifelse(
-      str_detect(sample, "Ps2Ex"), "Psen2S4Ter", dataset
-    ),
-    sample = ifelse(
-      str_detect(sample, "Ps2Ex"), str_remove(sample, "_R1"), sample
-    ),
-    organism = ifelse(
-      str_detect(sample, "(SRR213|SRR218|Ps2Ex)"), "zebrafish", organism
-    ),
-    dataset = ifelse(
-      str_detect(sample, "ERR313"), "E-MTAB-7636", dataset
-    ),
-    dataset = ifelse(
-      str_detect(sample, "ERR268"), "E-MTAB-6972", dataset
-    ),
-    organism = ifelse(
-      str_detect(sample, "(ERR313|ERR268)"), "mouse", organism
-    )
-  )
-datasets <- samples$dataset %>% 
-  unique()
+plan(multisession)
+# options(future.plan = "multisession")
 ```
 
 ## Sequence information
 
-```{r ah_Dr, cache=TRUE}
+```{r ah, cache=TRUE}
 ah_Dr <- AnnotationHub() %>%
   subset(species == "Danio rerio") %>%
   subset(rdataclass == "EnsDb")
@@ -159,217 +107,88 @@ mcols(txGR_Dr) <- mcols(txGR_Dr)[c("tx_id", "tx_name",
                                    "tx_biotype", "tx_id_version", "gene_id")]
 ```
 
-```{r ah_Mm, cache=TRUE}
-ah_Mm <- AnnotationHub() %>%
-  subset(species == "Mus musculus") %>%
-  subset(rdataclass == "EnsDb")
-ensDb_Mm <- ah_Mm[["AH75036"]]
-trEns_Mm <- transcripts(ensDb_Mm) %>%
-  mcols() %>% 
-  as_tibble()
-trLen_Mm <- exonsBy(ensDb_Mm, "tx") %>%
-  width() %>%
-  vapply(sum, integer(1))
-geneGcLen_Mm <- trLen_Mm %>%
-  enframe() %>%
-  set_colnames(c("tx_id", "length")) %>%
-  left_join(trEns_Mm) %>%
-  group_by(gene_id) %>% 
-  summarise(
-    aveLen = mean(length),
-    maxLen = max(length), 
-    aveGc = sum(length * gc_content) / sum(length),
-    longestGc = gc_content[which.max(length)[[1]]]
-  ) %>%
-  mutate(
-    aveGc =  aveGc / 100,
-    longestGc = longestGc / 100
-  )
-trGcLen_Mm <- trLen_Mm %>%
-  enframe() %>%
-  set_colnames(c("tx_id", "length")) %>%
-  left_join(trEns_Mm) %>%
-  group_by(tx_id) %>% 
-  summarise(
-    aveLen = mean(length),
-    maxLen = max(length), 
-    aveGc = sum(length * gc_content) / sum(length),
-    longestGc = gc_content[which.max(length)[[1]]]
-  ) %>%
-  mutate(
-    aveGc =  aveGc / 100,
-    longestGc = longestGc / 100
-  )
-genesGR_Mm <- genes(ensDb_Mm)
-mcols(genesGR_Mm) <- mcols(genesGR_Mm)[c("gene_id", "gene_name", 
-                                         "gene_biotype", "entrezid")]
-```
-
-```{r ah_Hs, cache=TRUE}
-ah_Hs <- AnnotationHub() %>%
-  subset(species == "Homo sapiens") %>%
-  subset(rdataclass == "EnsDb")
-ensDb_Hs <- ah_Hs[["AH75011"]]
-trEns_Hs <- transcripts(ensDb_Hs) %>%
-  mcols() %>% 
-  as_tibble()
-trLen_Hs <- exonsBy(ensDb_Hs, "tx") %>%
-  width() %>%
-  vapply(sum, integer(1))
-geneGcLen_Hs <- trLen_Hs %>%
-  enframe() %>%
-  set_colnames(c("tx_id", "length")) %>%
-  left_join(trEns_Hs) %>%
-  group_by(gene_id) %>% 
-  summarise(
-    aveLen = mean(length),
-    maxLen = max(length), 
-    aveGc = sum(length * gc_content) / sum(length),
-    longestGc = gc_content[which.max(length)[[1]]]
-  ) %>%
-  mutate(
-    aveGc =  aveGc / 100,
-    longestGc = longestGc / 100
-  )
-trGcLen_Hs <- trLen_Hs %>%
-  enframe() %>%
-  set_colnames(c("tx_id", "length")) %>%
-  left_join(trEns_Hs) %>%
-  group_by(tx_id) %>% 
-  summarise(
-    aveLen = mean(length),
-    maxLen = max(length), 
-    aveGc = sum(length * gc_content) / sum(length),
-    longestGc = gc_content[which.max(length)[[1]]]
-  ) %>%
-  mutate(
-    aveGc =  aveGc / 100,
-    longestGc = longestGc / 100
-  )
-genesGR_Hs <- genes(ensDb_Hs)
-mcols(genesGR_Hs) <- mcols(genesGR_Hs)[c("gene_id", "gene_name", 
-                                         "gene_biotype", "entrezid")]
-```
-
-An `EnsDb` object was obtained for Ensembl release 98 using the `AnnotationHub` package. This provided the GC content and length for every gene and transcript in the release. 
-
-- For *zebrafish*, this consisted of `r nrow(geneGcLen_Dr)` genes and `r nrow(trGcLen_Dr)` transcripts.
-- For *mouse*, `r nrow(geneGcLen_Mm)` genes and `r nrow(trGcLen_Mm)` transcripts.
-- For *human*, `r nrow(geneGcLen_Hs)` genes and `r nrow(trGcLen_Hs)` transcripts.
+An `EnsDb` object was obtained for Ensembl release 98 using the `AnnotationHub` package. This provided the GC content and length for every gene and transcript in the release. For *zebrafish*, this consists of `r nrow(geneGcLen_Dr)` genes and `r nrow(trGcLen_Dr)` transcripts.
 
 # Raw data
 
-Raw data was sourced from publically available datasets on ArrayExpress. Samples from zebrafish (*Danio rerio*) were chosen for an initial inspection as it is expected that rRNA sequences are more divergent from commonly chosen model organisms such as mice. Hence, inefficient ribosomal RNA (rRNA) depletion by kits that are generally optimised for these common model organisms may produce a stronger signal in zebrafish. 
+This is a total RNA dataset generated from a 3-way comparison of WT zebrafish (*Danio rerio*) with heterozygous mutants (psen2^S4Ter/+^) and homozygous mutants (psen2^S4Ter/S4Ter^). Previous analysis of this dataset identified the possibility of incomplete ribosomal RNA (rRNA) removal ([previous analysis](https://uofabioinformaticshub.github.io/20170327_Psen2S4Ter_RNASeq/index.html)).This dataset was chosen for an initial inspection as it is expected that rRNA sequences in zebrafish are more divergent from more common model organisms such as mice. Hence, inefficient rRNA depletion by kits that are generally optimised for these common model organisms may produce a stronger signal in zebrafish.
 
-Following an initial inspection, further analysis on human and mouse datasets was performed.
+## Sample information
 
-The following analysis involves `r nrow(samples)` samples across `r length(datasets)` datasets: `r paste(datasets, sep = ", ")`.
+```{r files}
+files <- list.files(
+  path = "../20170327_Psen2S4Ter_RNASeq/data/0_rawData/FastQC",
+  pattern = "zip",
+  full.names = TRUE
+) %>%
+  str_subset("R1_fastqc.zip")
+```
+
+```{r samples}
+samples <- tibble(
+  sample = str_remove(basename(files), "_fastqc.zip"),
+  dataset = NA,
+  organism = NA
+) %>%
+  mutate(
+    sample = ifelse(
+      str_detect(sample, "Ps2Ex"), str_remove(sample, "_R1"), sample
+    ),
+    dataset = ifelse(
+      str_detect(sample, "Ps2Ex"), "Psen2S4Ter", dataset
+    ),
+    organism = ifelse(
+      str_detect(sample, "(SRR213|SRR218|Ps2Ex)"), "zebrafish", organism
+    )
+  )
+datasets <- samples$dataset %>% 
+  unique()
+```
+
+The following analysis involves `r nrow(samples)` samples across `r length(datasets)` dataset(s): `r paste(datasets, sep = ", ")`.
 
 ## Library sizes
 
 ```{r rawFqcList}
-rawFqc <- filesFull %>%
+rawFqc <- files %>%
   FastqcDataList()
 ```
 
 ```{r rawLibPlots}
-data1 <- grepl("SRR213", fqName(rawFqc))
-rawLib1 <- plotReadTotals(rawFqc[data1]) +
-  labs(subtitle = "E-GEOD-71609")
-data2 <- grepl("SRR218", fqName(rawFqc))
-rawLib2 <- plotReadTotals(rawFqc[data2]) +
-  labs(subtitle = "E-GEOD-72322")
-data3 <- grepl("Ps2Ex", fqName(rawFqc))
-labels3 <- rawFqc[data3] %>%
+data <- grepl("Ps2Ex", fqName(rawFqc))
+labels <- rawFqc[data] %>%
   fqName() %>%
   str_remove("_6month_07_07_2016_F3") %>%
   str_remove("\\.fastq\\.gz") %>%
   str_remove("Ps2Ex3M1_")
-rawLib3 <- plotReadTotals(rawFqc[data3]) +
+rawLib <- plotReadTotals(rawFqc[data]) +
   labs(subtitle = "Psen2S4Ter") + 
-  scale_x_discrete(labels = labels3)
-data4 <- grepl("ERR313", fqName(rawFqc))
-rawLib4 <- plotReadTotals(rawFqc[data4]) +
-  labs(subtitle = "E-MTAB-7636") 
-data5 <- grepl("ERR268", fqName(rawFqc))
-rawLib5 <- plotReadTotals(rawFqc[data5]) +
-  labs(subtitle = "E-MTAB-6972")
+  scale_x_discrete(labels = labels)
 ```
 
-The library sizes of unprocessed datasets ranged between `r comma(min(readTotals(rawFqc)$Total_Sequences))` and `r comma(max(readTotals(rawFqc)$Total_Sequences))` reads.
+The library sizes of the unprocessed dataset(s) range between `r comma(min(readTotals(rawFqc)$Total_Sequences))` and `r comma(max(readTotals(rawFqc)$Total_Sequences))` reads.
 
-```{r plotRawLibs, fig.height=15}
-ggarrange(rawLib1, rawLib2, rawLib3, rawLib4, rawLib5, ncol = 1, nrow = 5)
+```{r plotRawLibs}
+rawLib
 ```
 
 ## GC content
 
 rRNA transcripts are known to have high GC content. Therefore, surveying the GC content of the raw reads serves as a good starting point for detecting incomplete rRNA removal. A spike in GC content at > 70% is expected if this is the case.
 
-```{r gcDist1, fig.cap="*GC content of reads in the dataset. No obvious spikes above 70% GC are observed, however unusual distibution shapes in some samples are worth further exploration.*"}
+```{r gcDist, fig.cap="*GC content of reads in the dataset. Clear spikes above 70% GC are observed, which is likely due to incomplete rRNA depletion.*"}
 plotly::ggplotly(
   plotGcContent(
-    x = rawFqc[data1], 
+    x = rawFqc[data], 
     plotType = "line",
     gcType = "Transcriptome",
     species = "Drerio"
   ) +
-    labs(title = "Dataset 1, E-GEOD-71609 (D. rerio)") + 
-    theme(legend.position="none")
-)
-```
-
-```{r gcDist2, fig.cap="*GC content of reads in the dataset. No obvious spikes above 70% GC are observed, however unusual distibution shapes in some samples are worth further exploration.*"}
-plotly::ggplotly(
-  plotGcContent(
-    x = rawFqc[data2], 
-    plotType = "line",
-    gcType = "Transcriptome",
-    species = "Drerio"
-  ) +
-    labs(title = "Dataset 2, E-GEOD-72322 (D. rerio)") + 
-    theme(legend.position="none")
-)
-```
-
-```{r gcDist3, fig.cap="*GC content of reads in the dataset. No obvious spikes above 70% GC are observed, however unusual distibution shapes in some samples are worth further exploration.*"}
-plotly::ggplotly(
-  plotGcContent(
-    x = rawFqc[data3], 
-    plotType = "line",
-    gcType = "Transcriptome",
-    species = "Drerio"
-  ) +
-    labs(title = "Dataset 3, Psen2S4Ter (D. rerio)") + 
+    labs(title = "Psen2S4Ter Dataset (D. rerio)") + 
     theme(legend.position="none")
 ) 
 ```
 
-```{r gcDist4, fig.cap="*GC content of reads in the dataset. No obvious spikes above 70% GC are observed, however unusual distibution shapes in some samples are worth further exploration.*"}
-plotly::ggplotly(
-  plotGcContent(
-    x = rawFqc[data4], 
-    plotType = "line",
-    gcType = "Transcriptome",
-    species = "Mmusculus"
-  ) +
-    labs(title = "Dataset 4, E-MTAB-7636 (M. musculus)") + 
-    theme(legend.position="none")
-)
-```
-
-```{r gcDist5, fig.cap="*GC content of reads in the dataset. No obvious spikes above 70% GC are observed, however unusual distibution shapes in some samples are worth further exploration.*"}
-plotly::ggplotly(
-  plotGcContent(
-    x = rawFqc[data5], 
-    plotType = "line",
-    gcType = "Transcriptome",
-    species = "Mmusculus"
-  ) +
-    labs(title = "Dataset 5, E-MTAB-6972 (M. musuculus)") + 
-    theme(legend.position="none")
-)
-```
 ## Overrepresented sequences
 
 The top 30 overrepresented sequences were analysed using `blastn` and  were found to be predominantly rRNA sequences.
@@ -398,17 +217,12 @@ getModule(rawFqc, "Overrep") %>%
 ## Trimming
 
 ```{r trimFqc}
-trimFqc1 <- list.files(
-  path = "1_trimmedData/FastQC", 
-  pattern = "zip", 
-  full.names = TRUE
-) 
-trimFqc2 <- list.files(
+trimFqc <- list.files(
   path = "../20170327_Psen2S4Ter_RNASeq/data/1_trimmedData/FastQC",
   pattern = "zip",
   full.names = TRUE
-)
-trimFqc <- c(trimFqc1, trimFqc2) %>%
+) %>%
+  str_subset("R1_fastqc.zip") %>%
   FastqcDataList()
 trimStats <- readTotals(rawFqc) %>%
   dplyr::rename(Raw = Total_Sequences) %>%
@@ -429,30 +243,15 @@ Trimmed reads were firstly aligned to rRNA sequences using the `BWA-MEM` algorit
 # rRNA proportions
 
 ```{r rRnaProp}
-prop1 <- samples %>%
-  dplyr::filter(dataset == "E-GEOD-71609") %>%
-  # cbind(tibble(proportion = c(0.0344, 0.0339, 0.0409, 0.0347, 0.0362, 0.0397, 0.0288, 0.0346, 0.0429, 0.0297))) 
-  cbind(tibble(proportion = c(0.0363, 0.0367, 0.0451, 0.0367, 0.0388, 0.0427, 0.0307, 0.0369, 0.0468, 0.0312)))
-prop2 <- samples %>%
-  dplyr::filter(dataset == "E-GEOD-72322") %>%
-  # cbind(tibble(proportion = c(0.1465, 0.1048, 0.1304, 0.1498, 0.1136, 0.1274, 0.1206, 0.1318, 0.1351, 0.1385, 0.1456, 0.1353, 0.1634, 0.1480, 0.1492, 0.1361, 0.1683, 0.1709, 0.1639, 0.1654, 0.1940, 0.1782, 0.1837, 0.1666)))
-  cbind(tibble(proportion = c(0.1673, 0.1060, 0.1410, 0.1758, 0.1154, 0.1292, 0.1213, 0.1361, 0.1368, 0.1449, 0.1510, 0.1370, 0.1745, 0.1580, 0.1562, 0.1441, 0.1743, 0.1749, 0.1715, 0.1713, 0.2110, 0.1887, 0.1895, 0.1739)))
-prop3 <- samples %>%
+rRnaProp <- samples %>%
   dplyr::filter(dataset == "Psen2S4Ter") %>%
   cbind(tibble(proportion = c(0.2291, 0.2504, 0.2615, 0.2260, 0.2215, 0.2128, 0.2468, 0.2284, 0.1366, 0.1188, 0.1892, 0.1608))) %>%
   mutate(
     sample = str_remove(sample, "_6month_07_07_2016_F3"),
     sample = str_remove(sample, "Ps2Ex3M1_")
   )
-prop4 <- samples %>%
-  dplyr::filter(dataset == "E-MTAB-7636") %>%
-  cbind(tibble(proportion = c(0.0614, 0.0517, 0.0458, 0.0633, 0.0547, 0.0564, 0.0525, 0.0520, 0.0551, 0.0513, 0.0473, 0.0448, 0.0407, 0.0238, 0.0499, 0.0307, 0.0383, 0.0178, 0.0232, 0.0384, 0.0461, 0.0545, 0.0389, 0.0353, 0.0866, 0.0763)))
-prop5 <- samples %>%
-  dplyr::filter(dataset == "E-MTAB-6972") %>%
-  cbind(tibble(proportion = c(0.0123, 0.0122, 0.0121, 0.0121, 0.0121, 0.0131, 0.0131, 0.0131, 0.0130, 0.0131, 0.0929, 0.0924, 0.0931, 0.0929, 0.0927, 0.0224, 0.0223, 0.0222, 0.0223, 0.0222)))
-rRnaProp <- rbind(prop1, prop2, prop3, prop4, prop5) 
 rRnaProp$dataset %<>%
-  factor(levels = c("E-GEOD-71609", "E-GEOD-72322", "Psen2S4Ter", "E-MTAB-7636", "E-MTAB-6972"))
+  factor(levels = c("Psen2S4Ter"))
 ```
 
 ```{r plotRRnaProp, fig.cap="*Percentages of each library that align to rRNA sequences with `bwa mem`.*"}
@@ -465,30 +264,12 @@ rRnaProp %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-Following alignment to rRNA sequences, reads that mapped to rRNA sequences were removed and a separate `fastq` file was created.
-
-These sequences were aligned to the *Danio rerio* GRCz11 genome (Ensembl release 98) using `STAR 2.7.0d` and summarised with `featureCounts`.
+Following alignment to known rRNA sequences, reads that mapped were removed to create a separate `fastq` file that did not contain sequences identified as rRNA. These remaining sequences were aligned to the *Danio rerio* GRCz11 genome (Ensembl release 98) using `STAR 2.7.0d` and summarised with `featureCounts`.
 
 # Gene GC content and length
 
 ```{r counts}
-dgeList_1 <- read_tsv("3_alignedDataStar/featureCounts/genes_Dr.out") %>%
-  set_colnames(basename(colnames(.))) %>%
-  set_colnames(str_remove(colnames(.), "Aligned.sortedByCoord.out.bam")) %>%
-  as.data.frame() %>%
-  column_to_rownames("Geneid") %>%
-  dplyr::select(str_subset(colnames(.), "SRR213")) %>%
-  DGEList() %>%
-  calcNormFactors()
-dgeList_2 <- read_tsv("3_alignedDataStar/featureCounts/genes_Dr.out") %>%
-  set_colnames(basename(colnames(.))) %>%
-  set_colnames(str_remove(colnames(.), "Aligned.sortedByCoord.out.bam")) %>%
-  as.data.frame() %>%
-  column_to_rownames("Geneid") %>%
-  dplyr::select(str_subset(colnames(.), "SRR218")) %>%
-  DGEList() %>%
-  calcNormFactors()
-dgeList_3 <- read_tsv("../20170327_Psen2S4Ter_RNASeq/data/2_alignedData/featureCounts/genes.out") %>%
+dgeList <- read_tsv("../20170327_Psen2S4Ter_RNASeq/data/2_alignedData/featureCounts/genes.out") %>%
   set_colnames(basename(colnames(.))) %>%
   set_colnames(str_remove(colnames(.), "Aligned.sortedByCoord.out.bam")) %>%
   set_colnames(str_remove(colnames(.), "_6month_07_07_2016_F3")) %>%
@@ -497,106 +278,30 @@ dgeList_3 <- read_tsv("../20170327_Psen2S4Ter_RNASeq/data/2_alignedData/featureC
   column_to_rownames("Geneid") %>%
   DGEList() %>%
   calcNormFactors()
-dgeList_4 <- read_tsv("3_alignedDataStar/featureCounts/genes_Mm.out") %>%
-  set_colnames(basename(colnames(.))) %>%
-  set_colnames(str_remove(colnames(.), "Aligned.sortedByCoord.out.bam")) %>%
-  as.data.frame() %>%
-  column_to_rownames("Geneid") %>%
-  dplyr::select(str_subset(colnames(.), "ERR313")) %>%
-  DGEList() %>%
-  calcNormFactors()
-dgeList_5 <- read_tsv("3_alignedDataStar/featureCounts/genes_Mm.out") %>%
-  set_colnames(basename(colnames(.))) %>%
-  set_colnames(str_remove(colnames(.), "Aligned.sortedByCoord.out.bam")) %>%
-  as.data.frame() %>%
-  column_to_rownames("Geneid") %>%
-  dplyr::select(str_subset(colnames(.), "ERR268")) %>%
-  DGEList() %>%
-  calcNormFactors()
 ```
 
 ```{r addInfo}
-dgeList_1$genes <- genesGR_Dr[rownames(dgeList_1),]
-mcols(dgeList_1$genes) %<>% 
-  as.data.frame() %>% 
-  left_join(geneGcLen_Dr) 
-dgeList_1$samples %<>%
-  rownames_to_column("rowname") %>%
-  mutate(sample = rowname) %>%
-  left_join(rRnaProp) %>%
-  column_to_rownames("rowname")
-dgeList_1$samples$filenames <- read_tsv(
-  "3_alignedDataStar/featureCounts/genes_Dr.out"
-) %>% 
-  dplyr::select(str_subset(colnames(.), "SRR213")) %>%
-  colnames() 
-
-dgeList_2$genes <- genesGR_Dr[rownames(dgeList_2),]
-mcols(dgeList_2$genes) %<>% 
+dgeList$genes <- genesGR_Dr[rownames(dgeList),]
+mcols(dgeList$genes) %<>% 
   as.data.frame() %>% 
   left_join(geneGcLen_Dr)
-dgeList_2$samples %<>%
+dgeList$samples %<>%
   rownames_to_column("rowname") %>%
   mutate(sample = rowname) %>%
   left_join(rRnaProp) %>%
   column_to_rownames("rowname")
-dgeList_2$samples$filenames <- read_tsv(
-  "3_alignedDataStar/featureCounts/genes_Dr.out"
-) %>% 
-  dplyr::select(str_subset(colnames(.), "SRR218")) %>%
-  colnames()
-
-dgeList_3$genes <- genesGR_Dr[rownames(dgeList_3),]
-mcols(dgeList_3$genes) %<>% 
-  as.data.frame() %>% 
-  left_join(geneGcLen_Dr)
-dgeList_3$samples %<>%
-  rownames_to_column("rowname") %>%
-  mutate(sample = rowname) %>%
-  left_join(rRnaProp) %>%
-  column_to_rownames("rowname")
-## file paths need to be changed to current filepath 
+## file paths needed to be changed to the current filepath 
 ## the original filepath (that featureCounts used) is different to the current
-dgeList_3$samples$filenames <- read_tsv(
+dgeList$samples$filenames <- read_tsv(
   "../20170327_Psen2S4Ter_RNASeq/data/2_alignedData/featureCounts/genes.out"
 ) %>% 
   dplyr::select(str_subset(colnames(.), "Ps2Ex3M1_")) %>%
   colnames() %>%
   str_replace(., "/2_al", "/data/2_al")
-
-dgeList_4$genes <- genesGR_Mm[rownames(dgeList_4),]
-mcols(dgeList_4$genes) %<>% 
-  as.data.frame() %>% 
-  left_join(geneGcLen_Mm)
-dgeList_4$samples %<>%
-  rownames_to_column("rowname") %>%
-  mutate(sample = rowname) %>%
-  left_join(rRnaProp) %>%
-  column_to_rownames("rowname")
-dgeList_4$samples$filenames <- read_tsv(
-  "3_alignedDataStar/featureCounts/genes_Mm.out"
-) %>% 
-  dplyr::select(str_subset(colnames(.), "ERR313")) %>%
-  colnames()
-
-dgeList_5$genes <- genesGR_Mm[rownames(dgeList_5),]
-mcols(dgeList_5$genes) %<>% 
-  as.data.frame() %>% 
-  left_join(geneGcLen_Mm)
-dgeList_5$samples %<>%
-  rownames_to_column("rowname") %>%
-  mutate(sample = rowname) %>%
-  left_join(rRnaProp) %>%
-  column_to_rownames("rowname")
-dgeList_5$samples$filenames <- read_tsv(
-  "3_alignedDataStar/featureCounts/genes_Mm.out"
-) %>% 
-  dplyr::select(str_subset(colnames(.), "ERR268")) %>%
-  colnames()
 ```
 
 ```{r gcFunc}
-gcInfo_Dr <- function(x) {
+gcInfo <- function(x) {
   x$counts %>%
     as.data.frame() %>%
     rownames_to_column("gene_id") %>%
@@ -611,35 +316,6 @@ gcInfo_Dr <- function(x) {
     ) %>%
     left_join(
       geneGcLen_Dr
-    ) %>%
-    dplyr::select(
-      ends_with("id"), sample, counts, aveGc, maxLen
-    ) %>%
-    split(f = .$sample) %>%
-    lapply(
-      function(x){
-        DataFrame(
-          gc = Rle(x$aveGc, x$counts),
-          logLen = Rle(log10(x$maxLen), x$counts)
-        )
-      }
-    ) 
-}
-gcInfo_Mm <- function(x) {
-  x$counts %>%
-    as.data.frame() %>%
-    rownames_to_column("gene_id") %>%
-    as_tibble() %>%
-    pivot_longer(
-      cols = colnames(x), 
-      names_to = "sample", 
-      values_to = "counts"
-    ) %>%
-    dplyr::filter(
-      counts > 0
-    ) %>%
-    left_join(
-      geneGcLen_Mm
     ) %>%
     dplyr::select(
       ends_with("id"), sample, counts, aveGc, maxLen
@@ -671,23 +347,15 @@ gcSummary <- function(x) {
 ```
 
 ```{r rle}
-rle_1 <- gcInfo_Dr(dgeList_1)
-rle_2 <- gcInfo_Dr(dgeList_2)
-rle_3 <- gcInfo_Dr(dgeList_3)
-rle_4 <- gcInfo_Mm(dgeList_4)
-rle_5 <- gcInfo_Mm(dgeList_5)
+rle <- gcInfo(dgeList)
 ```
 
 ```{r gcSummary}
-sum_1 <- gcSummary(rle_1)
-sum_2 <- gcSummary(rle_2)
-sum_3 <- gcSummary(rle_3)
-sum_4 <- gcSummary(rle_4)
-sum_5 <- gcSummary(rle_5)
+sumGc <- gcSummary(rle)
 ```
 
-```{r gc_1, fig.height=4, fig.cap="*Comparison of residual bias potentially introduced by incomplete rRNA removal. Regression lines are shown along with standard error bands for each comparison.*"}
-a_1 <- sum_1 %>%
+```{r gc, fig.height=4, fig.cap="*Comparison of residual bias potentially introduced by incomplete rRNA removal. Regression lines are shown along with standard error bands for each comparison.*"}
+a <- sumGc %>%
   left_join(rRnaProp) %>%
   ggplot(aes(proportion, mn_logLen)) +
   geom_point(size = 3) +
@@ -697,33 +365,7 @@ a_1 <- sum_1 %>%
     x = "rRNA Proportion of Initial Library",
     y = "Mean log(Length)"
   ) 
-b_1 <- sum_1 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_gc)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_y_continuous(labels = percent) +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean GC Content"
-  ) 
-ggarrange(a_1, b_1, ncol = 2, nrow = 1) %>%
-  annotate_figure("Dataset 1, E-GEOD-71609 (D. rerio)")
-```
-
-```{r gc_2, fig.height=4, fig.cap="*Comparison of residual bias potentially introduced by incomplete rRNA removal. Regression lines are shown along with standard error bands for each comparison.*"}
-a_2 <- sum_2 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_logLen)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean log(Length)"
-  ) 
-b_2 <- sum_2 %>%
+b <- sumGc %>%
   left_join(rRnaProp) %>%
   ggplot(aes(proportion, mn_gc)) +
   geom_point(size = 3) +
@@ -734,111 +376,33 @@ b_2 <- sum_2 %>%
     x = "rRNA Proportion of Initial Library",
     y = "Mean GC Content"
   )
-ggarrange(a_2, b_2, ncol = 2, nrow = 1) %>%
-  annotate_figure("Dataset 2, E-GEOD-72322 (D. rerio)")
-```
-
-```{r gc_3, fig.height=4, fig.cap="*Comparison of residual bias potentially introduced by incomplete rRNA removal. Regression lines are shown along with standard error bands for each comparison.*"}
-a_3 <- sum_3 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_logLen)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean log(Length)"
-  ) 
-b_3 <- sum_3 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_gc)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_y_continuous(labels = percent) +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean GC Content"
-  )
-ggarrange(a_3, b_3, ncol = 2, nrow = 1) %>%
-  annotate_figure("Dataset 3, PsenS4Ter (D. rerio)")
-```
-
-```{r gc_4, fig.height=4, fig.cap="*Comparison of residual bias potentially introduced by incomplete rRNA removal. Regression lines are shown along with standard error bands for each comparison.*"}
-a_4 <- sum_4 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_logLen)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean log(Length)"
-  ) 
-b_4 <- sum_4 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_gc)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_y_continuous(labels = percent) +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean GC Content"
-  )
-ggarrange(a_4, b_4, ncol = 2, nrow = 1) %>%
-  annotate_figure("Dataset 4, E-MTAB-7636 (M. musculus)")
-```
-
-```{r gc_5, fig.height=4, fig.cap="*Comparison of residual bias potentially introduced by incomplete rRNA removal. Regression lines are shown along with standard error bands for each comparison.*"}
-a_5 <- sum_5 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_logLen)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean log(Length)"
-  ) 
-b_5 <- sum_5 %>%
-  left_join(rRnaProp) %>%
-  ggplot(aes(proportion, mn_gc)) +
-  geom_point(size = 3) +
-  geom_smooth(method = "lm") +
-  scale_y_continuous(labels = percent) +
-  scale_x_continuous(labels = percent) +
-  labs(
-    x = "rRNA Proportion of Initial Library",
-    y = "Mean GC Content"
-  )
-ggarrange(a_5, b_5, ncol = 2, nrow = 1) %>%
-  annotate_figure("Dataset 5, E-MTAB-6972 (M. musculus)")
+ggarrange(a, b, ncol = 2, nrow = 1) %>%
+  annotate_figure("PsenS4Ter Dataset (D. rerio)")
 ```
 
 # PCA 
 
 ```{r dgeFilt}
-genes2keep_3 <- dgeList_3 %>%
+genes2keep <- dgeList %>%
   cpm() %>%
   is_greater_than(1) %>%
   rowSums() %>%
   is_weakly_greater_than(6)
-dgeFilt_3 <- dgeList_3[genes2keep_3,, keep.lib.sizes = FALSE] %>%
+dgeFilt <- dgeList[genes2keep,, keep.lib.sizes = FALSE] %>%
   calcNormFactors()
 ```
 
 ```{r pca}
-pca_3 <- cpm(dgeFilt_3, log = TRUE) %>%
+pca <- cpm(dgeFilt, log = TRUE) %>%
   t() %>%
   prcomp()
 ```
 
 ```{r pcaCor}
-pcaCor_3 <- pca_3$x %>%
+pcaCor <- pca$x %>%
   as.data.frame() %>%
   rownames_to_column("sample") %>%
-  left_join(sum_3) %>%
+  left_join(sumGc) %>%
   as_tibble() %>% 
   left_join(rRnaProp) %>%
   dplyr::select(
@@ -850,20 +414,18 @@ pcaCor_3 <- pca_3$x %>%
   cor()
 ```
 
-### Dataset 3 (*D. rerio*)
-
-```{r pcaPlots_3, fig.cap="*PCA plot showing rRNA proportion, mean GC content and mean log(length) after summarisation to gene-level.*"}
-a_3 <- pca_3$x %>%
+```{r pcaPlots, fig.cap="*PCA plot showing rRNA proportion, mean GC content and mean log(length) after summarisation to gene-level.*"}
+a <- pca$x %>%
   as.data.frame() %>%
   rownames_to_column("sample") %>%
   as_tibble() %>%
   ggplot(aes(PC1, PC2)) +
   geom_point(size = 2) +
   labs(
-    x = paste0("PC1 (", percent(summary(pca_3)$importance["Proportion of Variance","PC1"]),")"),
-    y = paste0("PC2 (", percent(summary(pca_3)$importance["Proportion of Variance","PC2"]),")")
+    x = paste0("PC1 (", percent(summary(pca)$importance["Proportion of Variance","PC1"]),")"),
+    y = paste0("PC2 (", percent(summary(pca)$importance["Proportion of Variance","PC2"]),")")
   )
-b_3 <- pca_3$x %>%
+b <- pca$x %>%
   as.data.frame() %>%
   rownames_to_column("sample") %>%
   left_join(rRnaProp) %>%
@@ -872,68 +434,68 @@ b_3 <- pca_3$x %>%
   geom_smooth(method = "lm") +
   scale_y_continuous(labels = percent) +
   labs(
-    x = paste0("PC1 (", percent(summary(pca_3)$importance["Proportion of Variance","PC1"]),")"),
+    x = paste0("PC1 (", percent(summary(pca)$importance["Proportion of Variance","PC1"]),")"),
     y = "rRNA Proportion of Initial Library"
   )
-c_3 <- pca_3$x %>%
+c <- pca$x %>%
   as.data.frame() %>%
   rownames_to_column("sample") %>%
-  left_join(sum_3) %>%
+  left_join(sumGc) %>%
   as_tibble() %>%
   ggplot(aes(PC1, mn_logLen)) +
   geom_point(size = 2) +
   geom_smooth(method = "lm") +
   labs(
-    x = paste0("PC1 (", percent(summary(pca_3)$importance["Proportion of Variance","PC1"]),")"),
+    x = paste0("PC1 (", percent(summary(pca)$importance["Proportion of Variance","PC1"]),")"),
     y = "Mean log(Length)"
   )
-d_3 <- pca_3$x %>%
+d <- pca$x %>%
   as.data.frame() %>%
   rownames_to_column("sample") %>%
-  left_join(sum_3) %>%
+  left_join(sumGc) %>%
   as_tibble() %>%
   ggplot(aes(PC1, mn_gc)) +
   geom_point(size = 2) +
   geom_smooth(method = "lm") +
   scale_y_continuous(labels = percent) +
   labs(
-    x = paste0("PC1 (", percent(summary(pca_3)$importance["Proportion of Variance","PC1"]),")"),
+    x = paste0("PC1 (", percent(summary(pca)$importance["Proportion of Variance","PC1"]),")"),
     y = "Mean GC"
   )
-ggarrange(a_3, b_3, c_3, d_3, ncol = 2, nrow = 2) %>%
+ggarrange(a, b, c, d, ncol = 2, nrow = 2) %>%
   annotate_figure("Psen2S4Ter")
 ```
 
-```{r corrplot_3, fig.cap="*Correlations between the first three principal components and measured variables: mean GC content, mean log(length) and rRNA proportion.*"}
+```{r corrplot, fig.cap="*Correlations between the first three principal components and measured variables: mean GC content, mean log(length) and rRNA proportion.*"}
 corrplot(
-  pcaCor_3,
+  pcaCor,
   type = "lower", 
   diag = FALSE, 
   addCoef.col = 1, addCoefasPercent = TRUE
 )
 ```
 
-# Differential abundance
+# Differential expression
 
 ```{r design}
-design_3 <- model.matrix(~proportion, data = dgeFilt_3$samples)
+design <- model.matrix(~proportion, data = dgeFilt$samples)
 ```
 
 ```{r voom}
-voom_3 <- voom(dgeFilt_3, design = design_3)
+voom <- voom(dgeFilt, design = design)
 ```
 
 ```{r fit}
-fit_3 <- lmFit(voom_3, design = design_3)
+fit <- lmFit(voom, design = design)
 ```
 
 ```{r eBayes}
-eBayes_3 <- eBayes(fit_3)
+eBayes <- eBayes(fit)
 ```
 
 ```{r topTable}
-topTable_3 <- eBayes_3 %>%
-  topTable(coef = colnames(design_3)[2], sort.by = "p", n = Inf) %>%
+topTable <- eBayes %>%
+  topTable(coef = colnames(design)[2], sort.by = "p", n = Inf) %>%
   set_colnames(str_remove(colnames(.), "ID\\.")) %>%
   mutate(DE = adj.P.Val < 0.05) %>%
   unite(Location, c(seqnames, start, end, width, strand), sep = ":") %>%
@@ -953,10 +515,8 @@ topTable_3 <- eBayes_3 %>%
   as_tibble()
 ```
 
-### Dataset 3 (*D. rerio*)
-
-```{r difResults_3}
-topTable_3 %>% 
+```{r difResults}
+topTable %>% 
   dplyr::select(Geneid, Symbol, AveExpr, logFC, P.Value, FDR, DE) %>%
   mutate(
     AveExpr = format(round(AveExpr, 2), nsmall = 2),
@@ -968,18 +528,18 @@ topTable_3 %>%
   datatable(options = list(pageLength = 20), class = "striped hover condensed responsive", filter = "top")
 ```
 
-# Transcript counts
+# Transcript-level counts
 
 ```{r catchSalmon}
-dirs_3 <- list.dirs(
+dirs <- list.dirs(
   "../20170327_Psen2S4Ter_RNASeq/data/5_salmon/quant/", 
   recursive = FALSE
 )
-salmon_3 <- catchSalmon(paths = dirs_3)
+salmon <- catchSalmon(paths = dirs)
 ```
 
 ```{r counts_tx}
-dgeListTx_3 <- salmon_3$counts %>%
+dgeListTx <- salmon$counts %>%
   set_colnames(basename(colnames(.))) %>%
   set_colnames(str_remove(colnames(.), "_6month_07_07_2016_F3")) %>%
   set_colnames(str_remove(colnames(.), "Ps2Ex3M1_")) %>%
@@ -992,12 +552,12 @@ dgeListTx_3 <- salmon_3$counts %>%
 ```
 
 ```{r dgeFilt_tx}
-genes2keep_3 <- dgeListTx_3 %>%
+genes2keep <- dgeListTx %>%
   cpm() %>%
   is_greater_than(1) %>%
   rowSums() %>%
   is_weakly_greater_than(6)
-dgeFiltTx_3 <- dgeListTx_3[genes2keep_3,, keep.lib.sizes = FALSE] %>%
+dgeFiltTx <- dgeListTx[genes2keep,, keep.lib.sizes = FALSE] %>%
   calcNormFactors()
 ```
 
@@ -1005,23 +565,23 @@ dgeFiltTx_3 <- dgeListTx_3[genes2keep_3,, keep.lib.sizes = FALSE] %>%
 
 ## Export fasta
 
-```{r topIds}
-deIds <- topTable_3 %>%
-  dplyr::filter(DE) %>%
-  .$Geneid
-```
-
-```{r conIds}
-notIds <- topTable_3 %>%
-  dplyr::filter(!DE) %>%
-  .$Geneid
-```
-
-```{r}
+```{r dnaTwoBit}
 dna <- ensembldb::getGenomeTwoBitFile(ensDb_Dr)
 ```
 
-```{r}
+```{r topIds}
+# deIds <- topTable %>%
+#   dplyr::filter(DE) %>%
+#   .$Geneid
+```
+
+```{r conIds}
+# notIds <- topTable %>%
+#   dplyr::filter(!DE) %>%
+#   .$Geneid
+```
+
+```{r De.fa}
 # deExons <- exonsBy(ensDb_Dr, by = "gene") %>%
 #   .[deIds] %>%
 #   lapply(function(x){
@@ -1040,7 +600,7 @@ dna <- ensembldb::getGenomeTwoBitFile(ensDb_Dr)
 # )
 ```
 
-```{r}
+```{r Con.fa}
 # conExons <- exonsBy(ensDb_Dr, by = "gene") %>%
 #   .[conIds] %>%
 #   lapply(function(x){
@@ -1061,7 +621,7 @@ dna <- ensembldb::getGenomeTwoBitFile(ensDb_Dr)
 
 ## Load kmer counts
 
-```{r}
+```{r loadMer}
 loadMer <- function(x){
   read.table(
     paste0(
@@ -1076,7 +636,7 @@ loadMer <- function(x){
 }
 ```
 
-```{r}
+```{r merDe}
 merDek5 <- loadMer("dek5")
 merDek6 <- loadMer("dek6")
 merDek7 <- loadMer("dek7")
@@ -1085,7 +645,7 @@ merDek9 <- loadMer("dek9")
 merDek10 <- loadMer("dek10")
 ```
 
-```{r}
+```{r merCon}
 merConk5 <- loadMer("conk5")
 merConk6 <- loadMer("conk6")
 merConk7 <- loadMer("conk7")
@@ -1096,7 +656,7 @@ merConk10 <- loadMer("conk10")
 
 ## Enrichment testing
 
-```{r}
+```{r merRatio}
 x <- merDek10
 y <- merConk10
 merRatio <- function(x, y) {
@@ -1113,7 +673,7 @@ merRatio <- function(x, y) {
 }
 ```
 
-```{r}
+```{r merRat}
 merRatk5 <- merRatio(merDek5, merConk5)
 merRatk6 <- merRatio(merDek6, merConk6)
 merRatk7 <- merRatio(merDek7, merConk7)
@@ -1122,7 +682,7 @@ merRatk9 <- merRatio(merDek9, merConk9)
 merRatk10 <- merRatio(merDek10, merConk10)
 ```
 
-```{r, fig.height=9}
+```{r plotRat, fig.height=9}
 plotRatk5 <- merRatk5 %>%
   ggplot(aes(p.x, p.y)) +
   geom_point(size = 1) +
@@ -1173,93 +733,87 @@ annotate_figure(
 )
 ```
 
-
 ### Fisher's exact test
 
-```{r}
+```{r exact.test}
 exact.test <- function(w,x,y,z) {
   test <- matrix(data = c(w, x, y, z), nrow = 2)
-  fisher.test(test)
+  fisher.test(test) %>%
+    .$p.value
 }
 ```
 
-```{r}
+```{r merPk5}
 sumDek5 <- sum(merRatk5$count.x)
 sumConk5 <- sum(merRatk5$count.y)
-merPk5 <- merRatk5 %>%
+merPk5 <- merRatk5[1:10,] %>%
   mutate(
-    exact.test = pmap(list(count.x, sumDek5, count.y, sumConk5), exact.test),
-    p.val = vapply(exact.test, function(x){x[["p.value"]]}, numeric(1)),
+    p.val = future_pmap_dbl(list(count.x, sumDek5, count.y, sumConk5), exact.test),
     p.adj = p.adjust(p.val, "bonf")
   ) %>%
-dplyr::arrange(p.val)
+  dplyr::arrange(p.val)
 ```
 
-```{r}
+```{r merPk6}
 sumDek6 <- sum(merRatk6$count.x)
 sumConk6 <- sum(merRatk6$count.y)
 merPk6 <- merRatk6 %>%
   mutate(
-    exact.test = pmap(list(count.x, sumDek6, count.y, sumConk6), exact.test),
-    p.val = vapply(exact.test, function(x){x[["p.value"]]}, numeric(1)),
+    p.val = future_pmap_dbl(list(count.x, sumDek6, count.y, sumConk6), exact.test),
     p.adj = p.adjust(p.val, "bonf")
   ) %>%
-dplyr::arrange(p.val)
+  dplyr::arrange(p.val)
 ```
 
-```{r}
+```{r merPk7}
 sumDek7 <- sum(merRatk7$count.x)
 sumConk7 <- sum(merRatk7$count.y)
 merPk7 <- merRatk7 %>%
   mutate(
-    exact.test = pmap(list(count.x, sumDek7, count.y, sumConk7), exact.test),
-    p.val = vapply(exact.test, function(x){x[["p.value"]]}, numeric(1)),
+    p.val = future_pmap_dbl(list(count.x, sumDek7, count.y, sumConk7), exact.test),
     p.adj = p.adjust(p.val, "bonf")
   ) %>%
-dplyr::arrange(p.val)
+  dplyr::arrange(p.val)
 ```
 
-```{r}
+```{r merPk8}
 sumDek8 <- sum(merRatk8$count.x)
 sumConk8 <- sum(merRatk8$count.y)
 merPk8 <- merRatk8 %>%
   mutate(
-    exact.test = pmap(list(count.x, sumDek8, count.y, sumConk8), exact.test),
-    p.val = vapply(exact.test, function(x){x[["p.value"]]}, numeric(1)),
+    p.val = future_pmap_dbl(list(count.x, sumDek8, count.y, sumConk8), exact.test),
     p.adj = p.adjust(p.val, "bonf")
   ) %>%
-dplyr::arrange(p.val)
+  dplyr::arrange(p.val)
 ```
 
-```{r}
+```{r merPk9}
 sumDek9 <- sum(merRatk9$count.x)
 sumConk9 <- sum(merRatk9$count.y)
 merPk9 <- merRatk9 %>%
   mutate(
-    exact.test = pmap(list(count.x, sumDek9, count.y, sumConk9), exact.test),
-    p.val = vapply(exact.test, function(x){x[["p.value"]]}, numeric(1)),
+    p.val = future_pmap_dbl(list(count.x, sumDek9, count.y, sumConk9), exact.test),
     p.adj = p.adjust(p.val, "bonf")
   ) %>%
-dplyr::arrange(p.val)
+  dplyr::arrange(p.val)
 ```
 
-```{r}
+```{r merPk10}
 sumDek10 <- sum(merRatk10$count.x)
 sumConk10 <- sum(merRatk10$count.y)
 merPk10 <- merRatk10 %>%
   mutate(
-    exact.test = pmap(list(count.x, sumDek10, count.y, sumConk10), exact.test),
-    p.val = vapply(exact.test, function(x){x[["p.value"]]}, numeric(1)),
+    p.val = future_pmap_dbl(list(count.x, sumDek10, count.y, sumConk10), exact.test),
     p.adj = p.adjust(p.val, "bonf")
   ) %>%
-dplyr::arrange(p.val)
+  dplyr::arrange(p.val)
 ```
 
 ## Binning GC content and length
 
-```{r}
+```{r binTable}
 # nBins <- list(length = 10, gc = 10)
-# binTable_3 <- topTable_3 %>%
+# binTable <- topTable %>%
 #   dplyr::select(-gene_biotype, entrezid) %>%
 #     mutate(
 #         lengthBins = cut(
@@ -1310,8 +864,6 @@ dplyr::arrange(p.val)
 
 # Coverage patterns
 
-# Coverage patterns
-
 ## Setup
 
 ```{r GvizOpts}
@@ -1349,24 +901,22 @@ genesFilt_Dr <- genes(
 ```
 
 ```{r orders}
-order_3 <- dgeList_3$samples %>%
+order <- dgeList$samples %>%
   dplyr::arrange(filenames) %>%
   as_tibble() %>% 
   rownames_to_column("order") %>% 
   dplyr::arrange(-proportion)
 ```
 
-## Dataset 3 (*D. rerio*)
-
-### *rpl29*
+## *rpl29*
 
 ```{r}
 ## Gene region & genome axis tracks
 sym <- "rpl29"
 goi <- genesFilt_Dr[mcols(genesFilt_Dr)$gene_name == sym,]$gene_id
-counts <- dgeList_3$counts[goi,]
+counts <- dgeList$counts[goi,]
 gm <- subset(exons_Dr, gene == goi) %>%
-  subset(transcript %in% rownames(dgeFiltTx_3))
+  subset(transcript %in% rownames(dgeFiltTx))
 gmRed <- gm %>% 
   GenomicRanges::reduce()
 st <- GenomicRanges::start(gmRed) %>% 
@@ -1449,9 +999,9 @@ param <- ScanBamParam(
   flag=scanBamFlag(isUnmappedQuery=FALSE)
 )
 covFunc <- function(x){
-  prop <- order_3$proportion[order_3$filenames == x] %>%
+  prop <- order$proportion[order$filenames == x] %>%
     percent(accuracy = 0.01)
-  reads <- counts[order_3$sample[order_3$filenames == x]]
+  reads <- counts[order$sample[order$filenames == x]]
   pileup(x, scanBamParam = param) %>%
     dplyr::filter(strand == str) %>%
     mutate(start = pos, end = pos, count = count/reads) %>% 
@@ -1467,7 +1017,7 @@ covFunc <- function(x){
     )
 }
 covList <- mclapply(files, covFunc, mc.cores = 8) 
-covOrd <- covList[as.integer(order_3$order)]
+covOrd <- covList[as.integer(order$order)]
 ```
 
 ```{r}
